app/assets/stylesheets/application.scss
@import './variables.scss';
@import './navbar.scss';
@import './toggle.scss';

@mixin translucent-bg {
  text-align: left !important;
  padding: 1em !important;
  background: rgba(0, 0, 0, 0.3);
  border-radius: 5px;
  color: rgba(255, 255, 255, 0.9) !important;
  p {
    a {
      color: rgb(235, 252, 255) !important;
      text-decoration: underline;
      font-weight: 600;
    }
  }
}

.application {
  text-align: center;
  @media screen and (min-width: 768px) {
    text-align: left;
    padding-left: 0px !important;
  }
  &-title {
    display: block;
    width: 100%;

    @media screen and(min-width: 768px) {
      width: 50%;
    }
    &-subtitle {
      font-size: 1.1em;
      opacity: 0.7;
    }
  }
  &-info {
    margin-top: 60%;
    @include translucent-bg;
    p {
      font-weight: 300;
      margin-bottom: 1.7rem;
    }
    &-about {
      font-size: 1.3em;
    }
    &-buttons {
      display: flex;
      justify-content: space-between;
    }

    // desktop styles
    // display: flex;
    // justify-content: center;
    // if the screen is too small horizontally or vertically (can't read text) show background

    // @media screen and (max-width: 768px), screen and (max-height: 950px) {
    //   @include translucent-bg;
    // }
  }

  &-footer {
    padding: 1rem 0;
    width: 100%;
    bottom: 0.3em;
    display: flex;
    justify-content: center;
    font-size: 0.9rem;
    @media screen and (min-width: 768px) {
      justify-content: flex-end;
      padding: 0 1rem;
      position: fixed;
    }
    a {
      opacity: 0.5;
      &:hover {
        opacity: 1;
      }
    }
  }
}

.card {
  width: 400px;
  max-width: 400px;
  &-footer-links a {
    margin-left: 4px;
  }
}

.input-group-prepend span {
  width: 40px;
  border: 0 !important;
}

.login_btn {
  width: 100px;
}

.form {
  &-actions {
    padding-top: 10px;
    padding-bottom: 20px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  &-label {
    display: flex;
    justify-content: left;
  }
}

.is-invalid {
  background-position: center right calc(0.9em + 0.1875rem) !important;
}

.devise-links {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

